src/objects/DS_Agreement_Validation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will store Mandatory fields and ERP status to check validity of agreement records.</description>
    <fields>
        <fullName>Agreement_MandatoryFields2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement_MandatoryFields2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_MandatoryFields3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement_MandatoryFields3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_MandatoryFields__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agreement_MandatoryFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ERP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DS_Agreement_Validation</label>
</CustomObject>